Done /auth endpoint Closes #17
